--- a/src/app/pages/fullscreen-map-page/fullscreen-map-page.component.html
+++ b/src/app/pages/fullscreen-map-page/fullscreen-map-page.component.html
@@ -1,1 +1,19 @@
 <div #map></div>
+
+<section id="controls">
+  <h2 class="text-2xl font-bold text-black mb-2">
+    Zoom
+    <small class="text-gray-500 font-normal">{{
+      myZoom() | number : "1.0-2"
+    }}</small>
+  </h2>
+  <input
+    type="range"
+    min="1"
+    max="19"
+    [value]="myZoom()"
+    class="range range-primary"
+    (input)="myZoom.set(+txtZoom.value)"
+    #txtZoom
+  />
+</section>
