--- a/src/app/pages/markers-page/markers-page.component.html
+++ b/src/app/pages/markers-page/markers-page.component.html
@@ -1,1 +1,31 @@
 <div class="h-[calc(100vh-64px)]" #marker></div>
+
+<section class="fixed w-60 bg-white rounded top-20 left-10 p-5">
+  <h2 class="text-xl font-bold text-black mb-2">Marcadores</h2>
+  <div class="flex flex-col gap-2">
+    @for (marker of markers(); track marker.id) {
+
+    <div
+      class="form-control"
+      (click)="flyToMarker(marker.mapTilerMarker.getLngLat())"
+    >
+      <label class="label cursor-pointer">
+        <span class="label-text text-black text-xs whitespace-normal">
+          {{ marker.mapTilerMarker.getLngLat() | json }}
+        </span>
+        <input
+          type="radio"
+          name="radio-10"
+          class="radio"
+          [style]="{ backgroundColor: marker.mapTilerMarker._color }"
+          checked="checked"
+        />
+      </label>
+    </div>
+    }@empty {
+    <div class="flex justify-center items-center bg-blue-100 rounded py-2">
+      <p class="text-xs text-secondary">No hay marcadores</p>
+    </div>
+    }
+  </div>
+</section>
