haciendo responsive a los marcadores

--- a/src/app/pages/markers-page/markers-page.component.html
+++ b/src/app/pages/markers-page/markers-page.component.html
@@ -1,6 +1,8 @@
-<div class="h-[calc(100vh-64px)]" #marker></div>
+<div class="h-[60vh] sm:h-[calc(100vh-64px)]" #marker></div>
 
-<section class="fixed w-60 bg-white rounded top-20 left-10 p-5">
+<section
+  class="h-[40vh] sm:fixed sm:w-60 bg-white sm:rounded sm:top-20 sm:left-10 p-5 overflow-y-scroll"
+>
   <h2 class="text-xl font-bold text-black mb-2">Marcadores</h2>
   <div class="flex flex-col gap-2">
     @for (marker of markers(); track marker.id) {
