--- a/src/app/shared/app-navbar/app-navbar.component.html
+++ b/src/app/shared/app-navbar/app-navbar.component.html
@@ -35,7 +35,7 @@
     <a class="btn btn-ghost text-xl">{{ pageTitle$ | async }}</a>
   </div>
   <div class="navbar-end">
-    <button class="btn btn-ghost btn-circle">
+    <!-- <button class="btn btn-ghost btn-circle">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         class="h-5 w-5"
@@ -70,5 +70,6 @@
         <span class="badge badge-xs badge-primary indicator-item"></span>
       </div>
     </button>
+    -->
   </div>
 </div>
